force-app/main/default/objects/Ticket_Mapping__c/Ticket_Mapping__c.object-meta.xml
<CustomObject>
    <label>Ticket Mapping</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Ticket Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>