force-app/main/default/objects/Ticket_Mapping__c/fields/Automated_QC_Error_Required__c.field-meta.xml
<CustomField>
    <fullName>Automated_QC_Error_Required__c</fullName>
    <label>Automated QC Error Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes  (to Qual)</fullName>
            </value>
            <value>
                <fullName>Opportunity Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>