force-app/main/default/objects/Ticket_Mapping__c/fields/From_Team_Process_step__c.field-meta.xml
<CustomField>
    <fullName>From_Team_Process_step__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Team (Process step)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>