force-app/main/default/objects/Ticket_Mapping__c/fields/Order_Status_when_Ticket_is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_when_Ticket_is_Closed__c</fullName>
    <label>Order Status when Ticket is Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Routing</fullName>
            </value>
            <value>
                <fullName>ER Outreach</fullName>
            </value>
            <value>
                <fullName>No Impact on Order Status</fullName>
            </value>
            <value>
                <fullName>No Impact on Status</fullName>
            </value>
            <value>
                <fullName>OE Verification/Checking Participation</fullName>
            </value>
            <value>
                <fullName>Ready for OE Prep</fullName>
            </value>
            <value>
                <fullName>Ready for Qualification</fullName>
            </value>
            <value>
                <fullName>Ready for Submission Prep</fullName>
            </value>
            <value>
                <fullName>Ready for Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Item</fullName>
            </value>
            <value>
                <fullName>Approved Pending EE Audit</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Entry in Progress</fullName>
            </value>
            <value>
                <fullName>With Sales</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Ready to Send Plan Review</fullName>
            </value>
            <value>
                <fullName>Ready to Send Enrollment Review</fullName>
            </value>
            <value>
                <fullName>Plan Review Sent</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Sent</fullName>
            </value>
            <value>
                <fullName>Back to status prior to ticket creation</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Ready for Early Submission</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>