force-app/main/default/objects/Ticket_Mapping__c/fields/Team_to_Receive_Order_when_Ticket_Closed__c.field-meta.xml
<CustomField>
    <fullName>Team_to_Receive_Order_when_Ticket_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team to Receive Order when Ticket Closed</label>
    <length>225</length>
    <type>Text</type>
</CustomField>