force-app/main/default/objects/Ticket_Mapping__c/fields/Ticket_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reason_Details__c</fullName>
    <label>Ticket Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER Signature</fullName>
            </value>
            <value>
                <fullName>Carrier Change Requested</fullName>
            </value>
            <value>
                <fullName>Company Address Change Requires BA</fullName>
            </value>
            <value>
                <fullName>Contribution Change Request</fullName>
            </value>
            <value>
                <fullName>Plan Add Request</fullName>
            </value>
            <value>
                <fullName>Plan Change Requested</fullName>
            </value>
            <value>
                <fullName>Rider Request</fullName>
            </value>
            <value>
                <fullName>Invalid waivers</fullName>
            </value>
            <value>
                <fullName>Not Enough Eligible Employees Post-OE</fullName>
            </value>
            <value>
                <fullName>Submit Enrollment</fullName>
            </value>
            <value>
                <fullName>Carrier Denial</fullName>
            </value>
            <value>
                <fullName>Chose Competitor-Earlier Effective Date</fullName>
            </value>
            <value>
                <fullName>Chose Competitor-More Plan Options</fullName>
            </value>
            <value>
                <fullName>Ineligible: Did Not Meet Ancillary Participation</fullName>
            </value>
            <value>
                <fullName>Ineligible: Did Not Meet Medical Participation</fullName>
            </value>
            <value>
                <fullName>Ineligible: OOS EEs</fullName>
            </value>
            <value>
                <fullName>Ineligible: Owner Only</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unresponsive ER</fullName>
            </value>
            <value>
                <fullName>Plan Add Requested</fullName>
            </value>
            <value>
                <fullName>Bundle of Plans Does Not Meet Requirments</fullName>
            </value>
            <value>
                <fullName>Contribution Scheme Does Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>Group Does Not Meet Participation Requirements Pre-OE</fullName>
            </value>
            <value>
                <fullName>Waiting Period Does Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>Notes Incomplete</fullName>
            </value>
            <value>
                <fullName>Hippo Does Not Match Notes</fullName>
            </value>
            <value>
                <fullName>Group Location Does Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>Medical Policy Not HSA-Compatible</fullName>
            </value>
            <value>
                <fullName>Network &amp; Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>