force-app/main/default/objects/Ticket_Mapping__c/fields/Ticket_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reason_s__c</fullName>
    <label>Ticket Reason(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mismatch info between SFDC and HIPPO</fullName>
            </value>
            <value>
                <fullName>Contribution Scheme Tied to a Ghost Plan</fullName>
            </value>
            <value>
                <fullName>Customer Change Request</fullName>
            </value>
            <value>
                <fullName>Employer Requested Contact</fullName>
            </value>
            <value>
                <fullName>Group Did Not Meet Participation Requirements</fullName>
            </value>
            <value>
                <fullName>Group Set Up Issue</fullName>
            </value>
            <value>
                <fullName>Employee Set Up Issue</fullName>
            </value>
            <value>
                <fullName>Concession request</fullName>
            </value>
            <value>
                <fullName>Issue Clarification</fullName>
            </value>
            <value>
                <fullName>Follow up on EE Comm</fullName>
            </value>
            <value>
                <fullName>Follow up on Partner Comm</fullName>
            </value>
            <value>
                <fullName>Payroll Issue Outside of Onboarding</fullName>
            </value>
            <value>
                <fullName>New Hire Employee not Enrolled</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Unresponsive ER</fullName>
            </value>
            <value>
                <fullName>Escalation Support</fullName>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>Missing Notes</fullName>
            </value>
            <value>
                <fullName>Notes Required Clarity</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Alignment</fullName>
            </value>
            <value>
                <fullName>Benefit Suspension/BoR Away</fullName>
            </value>
            <value>
                <fullName>Carrier Info Discrepancy</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Offering is Incorrect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rates</fullName>
            </value>
            <value>
                <fullName>Recertification</fullName>
            </value>
            <value>
                <fullName>Class-based contribution</fullName>
            </value>
            <value>
                <fullName>Research &amp; Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>