force-app/main/default/objects/Ticket_Mapping__c/fields/To_Sub_team__c.field-meta.xml
<CustomField>
    <fullName>To_Sub_team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Sub-team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>