force-app/main/default/objects/Ticket_Mapping__c/fields/To_Team__c.field-meta.xml
<CustomField>
    <fullName>To_Team__c</fullName>
    <label>To Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Advising</fullName>
            </value>
            <value>
                <fullName>Benefit Transfer</fullName>
            </value>
            <value>
                <fullName>Benefits Compliance</fullName>
            </value>
            <value>
                <fullName>Full Stack Sales</fullName>
            </value>
            <value>
                <fullName>Member Processing</fullName>
            </value>
            <value>
                <fullName>New Plan Sales</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>BoR Sales</fullName>
            </value>
            <value>
                <fullName>Member Operations</fullName>
            </value>
            <value>
                <fullName>Benefits Transfer</fullName>
            </value>
            <value>
                <fullName>BYB Advocate</fullName>
            </value>
            <value>
                <fullName>BYB Member Ops</fullName>
            </value>
            <value>
                <fullName>UI Vendor Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>